# RACG-Defense

./: cgra_agent.py  compiler_check.py  import_check.py  import_check_js.py  import_check_rust.py  run_experiment.py  run_experiment_one.py
results/: repair_results_js.txt  repair_results_py.txt  repair_results_rust.txt
test_samples/: cpp_bad_include.cpp
test_samples/js/: jsdompurify.js  robust_multer.js  tn-moment.js  uuid_safe.js
test_samples/python/: collection_strong.py  cumpy.py  full_scipy.py  malware_seaborn.py  matplotlib_safe.py  pandas_v2.py  pandass.py  requstss.py  robust_seaborn.py  sckit_learn.py  seaborn_full.py  seaborn_safe.py  seaborn_v2.py
test_samples/rust/: Cargo.toml  ndarray_v2.rs  regex_safe.rs  rocket_safe.rs  rsscraper.rs  serde_json_safe.rs
